# backup_manager

./: .gitignore  CMakeLists.txt  Dockerfile
include/: Compressor.h  FileCollector.h  FileInspector.h  FileTask.h  Hasher.h  MetadataWriter.h  SnapshotManager.h
src/: Compressor.cpp  FileCollector.cpp  FileInspector.cpp  FileTask.cpp  Hasher.cpp  MetadataWriter.cpp  SnapshotManager.cpp  main.cpp
